--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^9.120.5",
     "@react-three/fiber": "^8.17.10",
     "gsap": "^3.12.7",
+    "lenis": "^1.1.21",
     "leva": "^0.9.35",
     "maath": "^0.10.8",
     "react": "^18.3.1",
